--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,17 +27,25 @@ jobs:
         run: npm test
         
   build-docker:
-    needs: test  # Ejecutar solo si el job 'test' pasa
+    needs: test  
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout del código
-      uses: actions/checkout@v4
-    - name: Configurar Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    - name: Construir imagen Docker
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        file: ./Dockerfile
-        push: false # Solo construye, no publica
-        tags: miusuario/mi-app:${{ github.sha }}
+      - name: Checkout del código
+        uses: actions/checkout@v4
+        
+      - name: Configurar Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login en Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      - name: Build y push a Docker Hub
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./Dockerfile
+          [cite_start]push: true 
+          [cite_start]tags: ${{ secrets.DOCKERHUB_USERNAME }}/mi-app:latest
