--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,38 +1,38 @@
-name: Node CI 
- 
-on: 
-  push: 
-    branches: [ "main" ] 
-  pull_request: 
-    branches: [ "main" ] 
- 
-jobs: 
-  test: 
-    runs-on: ubuntu-latest 
- 
-    steps: 
-      - name: Checkout del código 
-        uses: actions/checkout@v4 
- 
-      - name: Configurar Node.js 
-        uses: actions/setup-node@v4 
-        with: 
-          node-version: '20.x' 
-          cache: 'npm' 
- 
-      - name: Instalar dependencias 
-        run: npm ci 
- 
-      - name: Ejecutar pruebas 
+name: Node CI
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout del código
+        uses: actions/checkout@v4
+
+      - name: Configurar Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+
+      - name: Instalar dependencias
+        run: npm ci
+
+      - name: Ejecutar pruebas
         run: npm test
-        
+
   build-docker:
-    needs: test  
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout del código
         uses: actions/checkout@v4
-        
+
       - name: Configurar Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -41,11 +41,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
+
       - name: Build y push a Docker Hub
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          [cite_start]push: true 
-          [cite_start]tags: ${{ secrets.DOCKERHUB_USERNAME }}/mi-app:latest
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/mi-app:latest
